# cargo-languagetool

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  justfile  release-plz.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: release-binary.yaml  release-plz.yaml  release-plz.yml  rust.yaml  upload-binary.yaml
src/: cache.rs  cli.rs  doc.rs  docs.rs  lib.rs  main.rs  utils.rs
src/cache/: mod.rs  sled.rs
src/languagetool/: categories.rs  mod.rs
