[package]
name        = "cargo-grammarly"
version     = "0.1.2"
authors     = [ "Ranadeep Biswas <mail@rnbguy.at>" ]
readme      = "README.md"
repository  = "https://github.com/rnbguy/cargo-grammarly"
homepage    = "https://github.com/rnbguy/cargo-grammarly"
license     = "MIT/Apache-2.0"
description = "A third-party cargo extension for checking grammar in the documentation and comments."
edition     = "2021"
keywords    = [ "grammar", "english", "api", "request", "language" ]
categories  = [ "development-tools", "development-tools::cargo-plugins" ]

[dependencies]
clap          = { version = "4", features = [ "derive" ] }
term          = "0.7"
dotenv        = "0.15"
grammarbot-io = "1.0"
walkdir       = "2"
syn           = "2.0"
proc-macro2   = { version = "1.0", features = [ "span-locations" ] }
color-eyre    = "0.6"

[linsts.rust]
unused_imports = "warn"

[lints.clippy]
all      = "warn"
pedantic = "warn"
nursery  = "warn"
cargo    = "warn"
