[package]
name        = "cargo-languagetool"
version     = "0.1.2"
authors     = [ "Ranadeep Biswas <mail@rnbguy.at>" ]
readme      = "README.md"
repository  = "https://github.com/rnbguy/cargo-languagetool"
homepage    = "https://github.com/rnbguy/cargo-languagetool"
license     = "MIT/Apache-2.0"
description = "A third-party cargo extension for checking grammar in the documentation and comments."
edition     = "2021"
keywords    = [ "grammar", "english", "api", "request", "language" ]
categories  = [ "development-tools", "development-tools::cargo-plugins" ]

[dependencies]
clap              = { version = "4", features = [ "derive" ] }
dotenv            = { version = "0.15" }
walkdir           = { version = "2" }
syn               = { version = "2.0" }
proc-macro2       = { version = "1.0", features = [ "span-locations" ] }
color-eyre        = { version = "0.6" }
languagetool-rust = { version = "2.1.4" }
tokio             = { version = "1.37.0", features = [ "tokio-macros" ] }
serde_json        = { version = "1.0.117" }

[lints.rust]
unused_imports = "warn"

[lints.clippy]
all      = "warn"
pedantic = "warn"
nursery  = "warn"
cargo    = "warn"
