[package]
name         = "cargo-languagetool"
version      = "0.4.3"
authors      = [ "Ranadeep Biswas <mail@rnbguy.at>" ]
readme       = "README.md"
repository   = "https://github.com/rnbguy/cargo-languagetool"
homepage     = "https://github.com/rnbguy/cargo-languagetool"
license      = "MIT"
description  = "A third-party cargo extension for checking grammar in the documentation and comments."
edition      = "2021"
keywords     = [ "grammar", "spellcheck", "documentation", "languagetool" ]
categories   = [ "development-tools", "development-tools::cargo-plugins" ]
rust-version = "1.81.0"

[dependencies]
clap              = { version = "4", features = [ "derive", "env" ] }
dotenv            = { version = "0.15" }
walkdir           = { version = "2" }
syn               = { version = "2" }
proc-macro2       = { version = "1", features = [ "span-locations" ] }
color-eyre        = { version = "0.6" }
languagetool-rust = { version = "2.1", default-features = false, features = [ "native-tls-vendored" ] }
tokio             = { version = "1", default-features = false, features = [ "rt" ] }
serde             = { version = "1", features = [ "derive" ] }
serde_json        = { version = "1" }
env_logger        = { version = "0.11" }
log               = { version = "0.4" }
sha2              = { version = "0.10" }
directories       = { version = "5" }
sled              = { version = "0.34" }
annotate-snippets = { version = "0.11" }

[lints.rust]
unused_imports = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# from `restriction` group
std_instead_of_core             = "warn"
allow_attributes_without_reason = "warn"

# allows
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
